[fix] add wordwrap to fix style issues

--- a/searx/static/themes/oscar/less/oscar/infobox.less
+++ b/searx/static/themes/oscar/less/oscar/infobox.less
@@ -1,6 +1,7 @@
 .infobox {
     .infobox_part {
         margin-bottom: 20px;
+         word-wrap: break-word;
     }
     
     .infobox_part:last-child {
