--- a/searx/static/themes/oscar/less/oscar/results.less
+++ b/searx/static/themes/oscar/less/oscar/results.less
@@ -18,6 +18,7 @@
 
 .result-content {
     margin-top: 5px;
+    word-wrap: break-word;
 
     .highlight {
         font-weight:bold;
